ressolve height issue on mobile screens

--- a/src/main/components/Pages/Products/index.css
+++ b/src/main/components/Pages/Products/index.css
@@ -13,7 +13,7 @@
 
 .gdp-nav {
     grid-column: 1;
-    height: 100vh;
+    /* height: 100vh; */
     position: sticky;
     top: var(--app-header-h);
     /* positio2 */
@@ -23,7 +23,7 @@
     grid-column: 2;
     display: grid;
     grid-template-columns: 1fr 13rem;
-    height: 100%;
+    /* height: 100%; */
     grid-template-rows: 1fr;
     grid-row: 1;
     column-gap: 1rem;
@@ -118,10 +118,10 @@
     overflow: hidden;
 }
 
-.gdp-tabcont-left {
+/* .gdp-tabcont-left {
     grid-column: 1;
     grid-row: 1;
-}
+} */
 
 /* .gdp-tabcont-right {
     grid-column: 2;
@@ -189,11 +189,11 @@
     margin-bottom: 0.5rem;
 }
 
-.gdp-content {
+/* .gdp-content {
     height: 100%;
     width: 100%;
     background-color: violet;
-}
+} */
 
 .gdp-top {
     grid-column: 1;
@@ -214,10 +214,6 @@
 
 @media screen and (max-width: 1230px) {
     .gdp-tabcont {
-        /* grid-template-columns: 100%; */
-        /* grid-template-rows: 5rem 100%; */
-        grid-template-rows: 50% 50%;
-        grid-template-columns: 100%;
         row-gap: 2rem;
         display: flex;
         flex-direction: column;
@@ -227,18 +223,15 @@
         grid-column: 1;
         grid-row: 2;
     }
-
-    .gdp-tabcont-right {
-        grid-column: 1;
-        grid-row: 1;
-    }
 }
 
 @media screen and (max-width: 850px) {
     .gdp-main {
-        grid-template-columns: 1fr;
-        grid-template-rows: 100% 100%;
+        display: flex;
+        flex-direction: column;
         column-gap: 0;
+        margin-bottom: 4rem;
+        padding: 0 1rem;
     }
 
     .gdp-left {
@@ -254,9 +247,7 @@
     .gdp-info {
         margin-top: 2rem;
     }
-}
 
-@media screen and (max-width: 850px) {
     .gdp {
         grid-template-columns: 1fr;
         width: 100%;
@@ -266,10 +257,5 @@
 
     .gdp-nav {
         display: none;
-    }
-
-    .gdp-main {
-        grid-column: 1;
-        padding: 0 1rem;
     }
 }
